--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
+    "@types/node": "^20.14.1",
     "nodemon": "^3.1.2",
     "swagger": "^0.7.5"
   },
