--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.1",
+    "@types/node-cron": "^3.0.11",
     "nodemon": "^3.1.2",
     "swagger": "^0.7.5"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.4.1"
+    "mongoose": "^8.4.1",
+    "node-cron": "^3.0.3"
   }
 }
